<b>1.5</b>

<*>Fix device lock from new encryption service breaking repartition</*>



<b>1.4</b>

<*>Fixed decrypting storage</*>



<b>1.3</b>

<*>Renamed to Tissot Manager</*>
<*>Fixed USB-OTG</*>
<*>Fixed slot change bug</*>
<*>Added some helpful post-install text regarding slots and TWRP installation</*>
<*>Version bump for new source-built TWRP</*>



<b>1.2</b>

<*>Support flashing img files to vendor and system (e.g. GSI's)</*>



<b>1.1</b>

<*>Treble Manager will now copy any saved log file to the microSD root</*>
<*>Treble Manager will now reboot recovery when changing partitions to ensure new partition changes are loaded by Recovery</*>



<b>1.0</b>

<*>Initial version</*>
<*>Aroma-based 'Treble Manager' button added to TWRP Main Menu > Advanced</*>
<*>Has choice to shrink userdata or system to create new vendor partition</*>
<*>Can restore stock partition map from either Treble state.</*>


